src/test/deca/context/invalid/equals-wrongParam.deca
class A {
	boolean equals(int jaj){
	 return false;
}
}

{ Object o = new A();
  if (o.equals(o)){
  println("jej");
}
}


